--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
-  "name": "element-starter",
-  "description": "A Vue.js project",
-  "author": "yi.shyang@ele.me",
+  "name": "ehsbase",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot --env.dev",
-    "build": "rimraf dist && webpack -p --progress --hide-modules"
+    "dev": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "babili-webpack-plugin": "^0.1.2",
+    "compression-webpack-plugin": "^3.0.0",
+    "core-js": "^2.6.5",
     "echarts": "^4.4.0",
-    "element-ui": "^2.3.4",
-    "vue": "^2.5.16",
+    "element-ui": "^2.12.0",
+    "eslint": "^5.16.0",
+    "vue": "^2.6.10",
     "vue-echarts": "^4.0.4",
-    "vue-router": "^3.1.3"
-  },
-  "engines": {
-    "node": ">=6"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.6.0",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.0",
-    "babel-preset-vue-app": "^1.2.0",
-    "css-loader": "^0.27.0",
-    "file-loader": "^0.10.1",
-    "html-webpack-plugin": "^2.24.1",
-    "postcss-loader": "^1.3.3",
-    "rimraf": "^2.5.4",
-    "style-loader": "^0.13.2",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "@vue/cli-plugin-babel": "^3.12.0",
+    "@vue/cli-plugin-eslint": "^3.12.0",
+    "@vue/cli-plugin-unit-jest": "^3.12.0",
+    "@vue/cli-service": "^3.12.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "vue-template-compiler": "^2.6.10"
   }
 }
