--- a/src/main/resources/application-server.properties
+++ b/src/main/resources/application-server.properties
@@ -10,4 +10,4 @@ spring.application.name=ehsui
 server.servlet.context-path= /
 
 server.compression.enabled=true
-server.compression.mime-types=image/svg+xml,image/png,image/x-icon,application/json,application/xml,text/xml,text/plain,application/x-javascript,text/html,application/javascript,text/css,application/font-woff
+server.compression.mime-types=image/svg+xml,application/json,application/xml,text/xml,text/plain,application/x-javascript,text/html,application/javascript,text/css,application/font-woff
