--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "compression-webpack-plugin": "^3.0.0",
+    "@babel/polyfill": "^7.7.0",
     "core-js": "^2.6.5",
     "echarts": "^4.4.0",
     "element-ui": "^2.12.0",
-    "eslint": "^5.16.0",
     "nprogress": "^0.2.0",
-    "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vue-echarts": "^4.0.4",
     "vue-router": "^3.0.3",
@@ -31,9 +29,11 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "compression-webpack-plugin": "^3.0.0",
+    "eslint": "^6.7.1",
     "eslint-plugin-vue": "^5.0.0",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
