--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.7.0",
     "core-js": "^2.6.5",
     "echarts": "^4.4.0",
     "element-ui": "^2.12.0",
     "nprogress": "^0.2.0",
+    "resize-detector": "^0.2.0",
     "vue": "^2.6.10",
     "vue-echarts": "^4.0.4",
     "vue-router": "^3.0.3",
