--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nprogress": "^0.2.0",
     "resize-detector": "^0.2.0",
     "vue": "^2.6.10",
+    "vue-calendar-component": "^2.8.2",
     "vue-echarts": "^4.0.4",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
