--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "echarts": "^4.4.0",
     "element-ui": "^2.12.0",
@@ -33,6 +34,7 @@
     "compression-webpack-plugin": "^3.0.0",
     "eslint": "^6.7.1",
     "eslint-plugin-vue": "^5.0.0",
+    "mockjs": "^1.1.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
